<resources>
    <string name="google_key">AIzaSyA2frpOOlJ3d4Nu9h5mY6yLxDOIcr_g2ew</string>
    <string name="app_name">Here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="purchases">Purchases</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="main">Home</string>
    <string name="dept">Department</string>
    <string name="search">Search</string>
    <string name="trolley">Cart</string>
    <string name="settings">Settings</string>
    <string name="free_delivery">free delivery</string>
    <string name="client_name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password*********</string>
    <string name="re_type_password">Re-type password****</string>
    <string name="register">Register</string>
    <string name="grocery_name">Grocery name</string>
    <string name="upload_photo">Upload photo</string>
    <string name="work_time">Hour of work from....to....</string>
    <string name="accept_rule">Approve the terms and conditions</string>
    <string name="groceries">Groceries</string>
    <string name="sm">Super markets</string>
    <string name="mm">Mini markets</string>
    <string name="add">Add</string>
    <string name="search_pro">Search for product</string>
    <string name="enter_pro_name">Enter product name</string>
    <string name="product">Product</string>
    <string name="weight">Weight</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="user_name">Username</string>
    <string name="licence_image">License image</string>
    <string name="residence_image">Residence image</string>
    <string name="car_form_image">Car form image</string>
    <string name="driver_name">Driver name</string>
    <string name="city">city</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="create_new_c_account">Create client account</string>
    <string name="create_new_g_account">Create grocery account</string>
    <string name="create_new_d_account">Create driver account</string>
    <string name="notifications_amp_sounds"><![CDATA[Notifications]]></string>
    <string name="sounds">Sounds</string>
    <string name="vibrate">Vibrate</string>
    <string name="create_accounts">Create account</string>
    <string name="forget_password">Forget password ?</string>
    <string name="password_login">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="name_req">Name required</string>
    <string name="phone_req">Phone required</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="username_req">Username required</string>
    <string name="password_req">Password required</string>
    <string name="re_pass_req">Re-Password required</string>
    <string name="ch_lis_img">Choose license image</string>
    <string name="ch_res_img">Choose residence image</string>
    <string name="ch_car_form">Choose car form image</string>
    <string name="city_req">City required</string>
    <string name="neighborhood_req">Neighborhood required</string>
    <string name="pass_not_match">Password not match</string>
    <string name="no_cat">There are no Markets to display</string>
    <string name="accept">Ok</string>
    <string name="ch_prof_img">Choose profile photo</string>
    <string name="something_error">Error : something went haywire try again later</string>
    <string name="no_not">There are no notifications to display</string>
    <string name="not">Notifications</string>
    <string name="not_alert">Notifications can not be displayed Please login to receive incoming notifications or create a new account</string>
    <string name="close">Close</string>
    <string name="lout">logout....</string>
    <string name="out">Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_un_pass">check username or password</string>
    <string name="ln">Login....</string>
    <string name="reg_success">Register success</string>
    <string name="reg_failed">Register failed try again later</string>
    <string name="edit">Edit</string>
    <string name="photo">صور</string>
    <string name="update">Update</string>
    <string name="upd_name">Update name</string>
    <string name="upd_phone">Update phone number</string>
    <string name="upd_password">Update password</string>
    <string name="upd_address">Update neighbourhood</string>
    <string name="update_city">Update city</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="old_password">Old password</string>
    <string name="address">Address</string>
    <string name="user_exist">User name exists choose another one</string>
    <string name="upd_img_prof">Updating image profile...</string>
    <string name="updating_name">Updating name...</string>
    <string name="updating_phone">Updating phone...</string>
    <string name="updating_username">Updating username...</string>
    <string name="updating_pass">Updating password...</string>
    <string name="updating_city">Updating city...</string>
    <string name="updating_nei">Updating neighbourhood...</string>
    <string name="upd_licence_photo">Updating licence photo...</string>
    <string name="upd_resd_photo">Updating residence photo...</string>
    <string name="upd_car_form">Updating car form photo...</string>
    <string name="suc_upd">Successfully updated</string>
    <string name="reg_log">Please Login or Create a new account</string>
    <string name="inc_old_pass">incorrect old password</string>
    <string name="trolley_empty">Cart is empty</string>
    <string name="contenue">Continue</string>
    <string name="time_req">time require</string>
    <string name="comp">Complete</string>
    <string name="reging">Registering....</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="sub_req">Subject require</string>
    <string name="msg_req">message require</string>
    <string name="wtsnotins">Whatsapp not installed</string>
    <string name="email_req">email require</string>
    <string name="inv_email">invalid email</string>
    <string name="sending">Sending...</string>
    <string name="sended">Successfully send</string>
    <string name="send_order">proceed to checkout</string>
    <string name="km">Km</string>
    <string name="cat">Categories</string>
    <string name="enter_loc">Enter order location</string>
    <string name="sel_loc">Select order location</string>
    <string name="inter">Check internet connection</string>
    <string name="send_orders">Send orders</string>
    <string name="sub_total">Subtotal\u0020\u0020:\u0020\u0020</string>
    <string name="phone_number2">Phone number\u0020\u0020:\u0020\u0020</string>
    <string name="delivery">Delivery\u0020\u0020:\u0020\u0020</string>
    <string name="total">Total\u0020\u0020:\u0020\u0020</string>
    <string name="sar">SAR</string>
    <string name="tot">Order Cost</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="login_or_register_continue">This service is available to customers and drivers Please log in or create a new account so you can continue your purchase.</string>
    <string name="failed">Failed</string>
    <string name="succ_send">Order successfully sent</string>
    <string name="sending_order">Sending orders...</string>
    <string name="no_driver">There are no available drivers</string>
    <string name="inv_loc">Invalid location</string>
    <string name="locating">Locating...</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recov_pass">Recover your account.We will send you a link to change your password</string>
    <string name="reset_password">Reset password</string>
    <string name="restoring_pass">Restoring Password...</string>
    <string name="msg_will_send_torecover_pass">A message will be sent to the email to recover the password</string>
    <string name="search2">Search</string>
    <string name="upd_username">Update Username</string>
    <string name="accept2">Accept</string>
    <string name="refuse2">Refuse</string>
    <string name="more">More</string>
    <string name="newpass_txt">New password</string>
    <string name="order_canceld">Order is canceled</string>
    <string name="details_title">Details</string>
    <string name="driver_info">Driver Information</string>
    <string name="groc_info">Grocery Information</string>
    <string name="client_information">Client Information</string>
    <string name="add_categories">Add Categories</string>
    <string name="no_search_results">No Search Results</string>
    <string name="search3">Search</string>
    <string name="sear_title">Enter Search Title</string>
    <string name="rep_don">Replay done</string>
    <string name="refuse_nodriver_available">Your request has been refused and there are no drivers available to send your request</string>
    <string name="no_ordertodis">There are no orders to display</string>
    <string name="delivered">Delivered</string>
    <string name="live_chat">Live Chat</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="type_a_message">Type a message.....</string>
    <string name="cities">Cities</string>
    <string name="ending_req">Ending request...</string>
    <string name="sel_image">Select Image</string>
    <string name="order_cost">Order Cost :</string>
    <string name="enter_ord_cost">Enter order cost</string>
    <string name="enter_del_cost">Enter delivery cost</string>
    <string name="im_save">image saved</string>
    <string name="start_down">Start Download...</string>
    <string name="sent_image">Sent a photo</string>
    <string name="ch_loc">Search area</string>
    <string name="your_area">Your area</string>
    <string name="no_search_res">No search results</string>
</resources>
